# auv_gnc

./: .gitmodules  LICENSE  README.md
auv_control/: CMakeLists.txt  package.xml
auv_control/cfg/: LQRGains.cfg  LQRWeights.cfg
auv_control/include/auv_control/: auv_lqr.hpp  auv_model.hpp  lqr.hpp  nominal_thrust_solver.hpp
auv_control/src/: auv_lqr.cpp  auv_model.cpp  lqr.cpp
auv_core/: CMakeLists.txt  package.xml
auv_core/include/auv_core/: auv_core_headers.hpp  auv_model.hpp  auv_structs.hpp  constants.hpp  eigen_ros.hpp  eigen_typedefs.hpp  math_lib.hpp  rot3d.hpp
auv_core/src/: auv_model.cpp  eigen_ros.cpp  math_lib.cpp  rot3d.cpp
auv_gnc/: CMakeLists.txt  package.xml
auv_gnc/cfg/: auv_config.yaml  auv_controller.yaml  auv_model.yaml  auv_params.yaml  gc_config.yaml  guidance_controller.yaml  lqr.yaml  trans_ekf.yaml
auv_gnc/include/auv_gnc/: auv_controller.hpp  auv_gnc.hpp  auv_math_lib.h  auv_math_lib.hpp  auv_model.h  auv_model.hpp  distance_motion_planner.h  distance_motion_planner.hpp  ekf_translation.h  ekf_translation.hpp  guidance_controller.hpp  kalman_filter.h  linear_motion_ekf_suite.hpp  pose_ekf_suite.hpp  test_node.hpp  trajectory_arc.hpp  trajectory_euler_rotation.hpp  trajectory_generator_abstract.hpp  trajectory_line.hpp  trajectory_translation.hpp  trans_ekf.h  trans_ekf.hpp
auv_gnc/include/riptide_gnc/: distance_motion_planner.h  pose_edkf_interface.h
auv_gnc/launch/: guidance_controller.launch  test_node.launch  trans_ekf.launch
auv_gnc/src/: auv_controller.cpp  auv_gnc.cpp  auv_math_lib.cpp  auv_model.cpp  distance_motion_planner.cpp  ekf_translation.cpp  guidance_controller.cpp  guidance_controller_node.cpp  kalman_filter.cpp  linear_motion_ekf_suite.cpp  pose_edkf_interface.cpp  pose_ekf_suite.cpp  segment_planner.cpp  test_node.cpp  trajectory_arc.cpp  trajectory_euler_rotation.cpp  trajectory_line.cpp  trajectory_translation.cpp  trans_ekf.cpp  trans_ekf_node.cpp
auv_guidance/: CMakeLists.txt  package.xml
auv_guidance/include/auv_guidance/: abstract_trajectory.hpp  auv_trajectory.hpp  basic_trajectory.hpp  dive_trajectory.hpp  long_range_trajectory.hpp  long_range_trajectory_OLD.hpp  long_trajectory.hpp  min_jerk_time_solver.hpp  min_jerk_trajectory.hpp  min_jerk_velocity.hpp  min_jerk_velocity_profile.hpp  minimum_jerk_trajectory.hpp  monotonic_trajectory.hpp  monotonic_trajectory_base.hpp  monotonic_trajectory_time_solver.hpp  parallel_trajectory.hpp  pose.hpp  reset_trajectory.hpp  segment_planner.hpp  short_range_trajectory.hpp  simultaneous_trajectory.hpp  test_node.hpp  tgen_limits.hpp  trajectory_arc.hpp  trajectory_euler_rotation.hpp  trajectory_generator_abstract.hpp  trajectory_line.hpp  waypoint.hpp  waypoint_trajectory.hpp
auv_guidance/launch/: test_node.launch
auv_guidance/src/: auv_trajectory.cpp  basic_trajectory.cpp  dive_trajectory.cpp  long_range_trajectory.cpp  long_range_trajectory_OLD.cpp  long_trajectory.cpp  min_jerk_time_solver.cpp  min_jerk_trajectory.cpp  min_jerk_velocity.cpp  min_jerk_velocity_profile.cpp  minimum_jerk_trajectory.cpp  monotonic_trajectory.cpp  monotonic_trajectory_base.cpp  parallel_trajectory.cpp  pose.cpp  reset_trajectory.cpp  segment_planner.cpp  short_range_trajectory.cpp  simultaneous_trajectory.cpp  test_node.cpp  tgen_limits.cpp  trajectory_arc.cpp  trajectory_euler_rotation.cpp  trajectory_line.cpp  waypoint.cpp  waypoint_trajectory.cpp
auv_msgs/: CMakeLists.txt  package.xml
auv_msgs/action/: Trajectory.action  TrajectoryGenerator.action
auv_msgs/msg/: SixDoF.msg  Thrust.msg  Trajectory.msg
auv_navigation/: CMakeLists.txt  package.xml
auv_navigation/include/auv_navigation/: auv_math_lib.hpp  ekf_translation.hpp  kalman_filter.hpp  test_node.hpp  translation_ekf.hpp
auv_navigation/launch/: test_node.launch
auv_navigation/src/: auv_math_lib.cpp  ekf_translation.cpp  kalman_filter.cpp  test_node.cpp  translation_ekf.cpp
installation/: install_cppad.sh  install_deps.sh
