<?xml version="1.0"?>
<package format="2">
  <name>auv_gnc</name>
  <version>0.0.1</version>
  <description>The auv_gnc package</description>

  <maintainer email="tsender97@gmail.com">tsender</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>auv_core</build_depend>
  <build_depend>auv_guidance</build_depend>
  <build_depend>auv_navigation</build_depend>
  <build_depend>auv_control</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>auv_msgs</exec_depend>
  
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  
  <export>
  </export>
</package>
