<?xml version="1.0"?>
<package format="2">
  <name>auv_guidance</name>
  <version>0.0.1</version>
  <description>The auv_guidance package</description>

  <maintainer email="tsender97@gmail.com">tsender</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>auv_control</build_depend>
  <build_depend>auv_navigation</build_depend>

  <export>
  </export>
</package>
