<?xml version="1.0"?>
<package format="2">
  <name>auv_navigation</name>
  <version>0.0.0</version>
  <description>The auv_navigation package</description>

  <maintainer email="tsender97@gmail.com">tsender</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>auv_core</build_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
